[tool.poetry]
name = "Packim Baggims - Discord Bot"
version = "2.0"
description = "A personal Discord Bot!"
authors = ["Diogo Webber"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
replit = "^3.2.4"
Flask = "^2.1.2"
requests = "^2.25.1"
click = "^8.1.3"
discord = "^1.7.3"
discord-py-slash-command = "^3.0.3"
googlesearch-python = "^1.1.0"
lxml = "^4.8.0"
Pillow = "^9.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"